# spot-archive

./: .gitignore  README.md  pyproject.toml
src/spot_archive/: constants.py  spotify_secrets.py  spotipy_helpers.py
src/spot_archive/cli/: spot_archive_cli.py
src/spot_archive/cli/backups/: liked_songs.py  playlists.py
