[build-system]
requires = ["setuptools >= 69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-archive"
version = "0.0.1"
dependencies = ["spotipy", "tqdm"]
requires-python = ">=3.11"
authors = [{ name = "Michael Pavkovic", email = "me@michaelpavkovic.com" }]
description = "Backup your Spotify account to text-based files."
readme = "README.md"

[project.scripts]
spot-archive = "spot_archive.cli.spot_archive_cli:spot_archive_cli"

[project.optional-dependencies]
cli = ["click"]
tests = ["pytest"]
dev = ["black", "flake8", "flake8-pyproject", "isort"]

[tool.flake8]
max-line-length = 120
select = "F,E,W,B,B901,B902,B903"
exclude = [
    ".eggs",
    ".git",
    ".tox",
    "nssm",
    "obj",
    "out",
    "packages",
    "pywin32",
    "tests",
    "swagger_client",
]
ignore = ["E722", "B001", "W503", "E203"]

[tool.black]
line-length = 120
fast = true

[tool.isort]
known_first_party = "spot_archive"
src_paths = ["src", "test"]
line_length = 120
